# TMath

./: .clang-format  CMakeLists.txt  README.md  main.cpp  tmath.hpp
